Fix Player component hiding behind header in Safari

--- a/src/css/components/Page.css
+++ b/src/css/components/Page.css
@@ -1,7 +1,6 @@
 .Page {
   background-color: #f6f1f1;
   position: relative;
-  z-index: var(--layer-page);
   margin-top: var(--header-height);
   min-height: calc(100vh - var(--header-height));
   box-sizing: border-box;
